ADDING a README file

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This Repo contains my analysis over different machine learning papers. Always being updated. For more information, please contact me at: mohamad.allakkis@gmail.com
+This Repo contains my analysis for different technical papers in the realm of ML, DL, and AI. Always being updated. For more information, please contact me at: mohamad.allakkis@gmail.com
