--- a/Benchmarking Machine Learning Techniques for THz Channel Estimation Problems/Notes/notes.tex
+++ b/Benchmarking Machine Learning Techniques for THz Channel Estimation Problems/Notes/notes.tex
@@ -1,6 +1,7 @@
 \documentclass{article}
 \usepackage{amsmath}
 \usepackage{amssymb}
+\usepackage{hyperref}
 
 \begin{document}
 
@@ -98,11 +99,141 @@ where \( \phi(\cdot) \) is the cumulative distribution function (CDF) of the sta
 
 By minimizing this log-likelihood function, the model attempts to estimate the channel parameters that maximize the probability of the observed binary outputs.
 
+\section{Projected Gradient Descent (PGD)}
+Now we will go through the **Projected Gradient Descent (PGD)** algorithm. This algorithm is usually used when we have a constrained problem: \\
+\noindent
+\textbf{Unconstrained minimization}
+
+\[
+\min_{x \in \mathbb{R}^n} f(x).
+\]
+
+\begin{itemize}
+    \item All $x \in \mathbb{R}^n$ is feasible.
+    \item Any $x \in \mathbb{R}^n$ can be a solution.
+\end{itemize}
+
+\vspace{0.5cm}
+
+\noindent
+\textbf{Constrained minimization}
+
+\[
+\min_{x \in Q} f(x).
+\]
+
+\begin{itemize}
+    \item Not all $x \in \mathbb{R}^n$ is feasible.
+    \item Not all $x \in \mathbb{R}^n$ can be a solution.
+    \item The solution has to be inside the set $Q$.
+\end{itemize}
+
+An example:
+
+\[
+\min_{x \in \mathbb{R}^n} \|Ax - b\|_2^2 \quad \text{s.t.} \quad \|x\|_2 \leq 1
+\]
+
+can be expressed as
+
+\[
+\min_{\|x\|_2 \leq 1} \|Ax - b\|_2^2.
+\]
+
+Here $Q := \{v \in \mathbb{R}^n : \|v\|_2 \leq 1\}$ is known as the unit $\ell_2$ ball.\\ 
+
+\underline{Let us recap} for a moment how gradient Descent Works for \underline{Unconstrained Problems}:\\
+Reminder of the problem: 
+
+\[
+\min_{x \in Q} f(x).
+\]
+
+\begin{itemize}
+    \item Starting from an initial point $x_0 \in \mathbb{R}^n$, \textbf{GD} iterates the following until a stopping condition is met:
+\end{itemize}
+
+\[
+x_{k+1} = x_k - \alpha_k \nabla f(x_k),
+\]
+
+\begin{itemize}
+    \item $k \in \mathbb{N}$: the current iteration counter
+    \item $k + 1 \in \mathbb{N}$: the next iteration counter
+    \item $x_k$: the current variable
+    \item $x_{k+1}$: the next variable
+    \item $\nabla f$ is the gradient of $f$ with respect to differentiation of $x$ (i.e. $\nabla f = \frac{\partial f}{\partial x}$)
+    \item $\nabla f(x_k)$ is the $\nabla f$ at the current variable $x_k$
+    \item $\alpha_k \in (0, +\infty)$: gradient stepsize, could be fixed or learned at each iteration. 
+    \item \underline{Note:} Here we are assuming that the function $f$ is differentiable. If that is not the case, we can use subgradient descent.
+\end{itemize} 
+\subsection*{Now the Question is Can we tune this algorithm to make it work for Constrained Problems?}
+And the answer is yes, the key is Euclidean projection operator. $\mathbb{R}^n \to \mathbb{R}^n$. 
+Like before we will \underline{start with some assumptions:}
+\begin{itemize}
+  \item $f$ is assumed to be continously differentiable. (i.e. $f \in C^1$ or $\nabla f(x)$ exists $\forall x$)
+  \item In general one also assumes that $f$ is globally L-Lipschitz continuous. (i.e. $\| \nabla f(x) - \nabla f(y) \| \leq L \|x - y\|$)
+
+\item \(\emptyset \neq Q \subset \mathbb{R}^n \text{ is convex and compact}
+\)
+    \item The constraint is represented by a set $Q$
+    \item $Q \subset \mathbb{R}^n$ means $Q$ is a subset of $\mathbb{R}^n$, the domain of $f$
+    \item $Q \neq \emptyset$ means $Q$ is not an empty set. \textit{it is not useful for discussion if } Q \text{ is empty}
+    \item $Q$ is a convex set \ \(
+\forall x \forall y \forall \lambda \in (0,1) \left( x \in Q, y \in Q \implies \lambda x + (1 - \lambda) y \in Q \right)
+\)
+    \item $Q$ is compact \ \textit{compact = bounded + closed} \\
+\end{itemize}
+Now PGD = GD + Projection. \\
+\begin{itemize}
+    \item Starting from an initial point $x_0 \in \mathbb{R}^n$, \textbf{PGD} iterates the following until a stopping condition is met:
+    \item $x_{k+1} = \text{Proj}_Q(x_k - \alpha_k \nabla f(x_k))$
+    \item $\text{Proj}_Q$ is the Euclidean projection operator onto $Q$, which maps a point in $\mathbb{R}^n$ to the closest point in $Q$.(i.e. $\text{Proj}_Q(x) = \underset{y \in Q}{\text{argmin}} \|x - y\|_2$)
+    \item $\alpha_k \in (0, +\infty)$: gradient stepsize, could be fixed or learned at each iteration.
+    \item $k \in \mathbb{N}$: the current iteration counter
+    \item $k + 1 \in \mathbb{N}$: the next iteration counter
+    \item $x_k$: the current variable
+    \item $x_{k+1}$: the next variable
+    \item $\nabla f$ is the gradient of $f$ with respect to differentiation of $x$ (i.e. $\nabla f = \frac{\partial f}{\partial x}$)
+\end{itemize}
 \section{Projected Gradient Ascent (PGA)}
-Now we will go through the **Projected Gradient Ascent (PGA)** algorithm used in the paper. 
+This is the same as PGD, but instead of minimizing the function, we are maximizing it. (so in ML, we changed the objective function, not the same ONE we were trying to minimize, because that doesn't make sense!) \\ 
+And instead of taking a step in the opposite direction of the gradient, we are taking a step in the direction of the gradient. \\ 
+Lastly Note that the proj function stays the same, if the point is outisde our desired set, we need to projected back by finding the closest point to it from this set. (In the Euclidean Projection we use Euclidean Distance!) 
+\subsection*{Relating this to what we are we doing in the paper:}
+Some Questions to answer: 
+\begin{itemize}
+  \item What is the constraint we are working under (i.e. what is the set $Q$)?
+  \item How are we projecting this Matrix $H$ that we got back to $Q$? 
+\end{itemize}
+Very interesting questions, let's dive into them: 
+\subsubsection*{Our constrained Set $Q$}
+The constraint is that \( H \) should have a low rank \( r \ll N \). In many real-world systems, the channels can often be well-approximated by matrices of much lower rank. For example, in multiple-input multiple-output (MIMO) systems, low-rank approximations are often used to reduce computational complexity. For more details, refer to the work in this paper \cite{myers2020} available at \href{https://ieeexplore.ieee.org/document/9053514}{IEEE Xplore}. \\ 
+So the update step in the PGA algorithm is as follows:
+\[
+H_{k+1} = H_k + \alpha_k \nabla f(H_k)
+\]
+Where \( \nabla f(H_k) \) is the gradient of the loss function with respect to \( H_k \), and \( \alpha_k \) is the step size. \\
+But now we have a \underline{Problem} How do we make sure this matrix $H_{k+1} \in Q?$  
+\subsubsection*{Projection Step to $Q$}
+There is many way to project a matrix to a low-rank space, but one of the most known way is to use the **Singular Value Decomposition (SVD)**. SVD is a matrix factorization technique that can decompose a matrix into its singular values and corresponding singular vectors. By keeping only the largest singular values (up to rank $r$), you can project the matrix back onto the space of low-rank matrices.\\ Simplex projection: Ensures the solution remains within certain constraints.(maybe $H$ non-negative or any other constrain) \\ 
+The SVD of a matrix \( H \) is given by:
+\[
+H = U \Sigma V^T
+\]
+where \( U \) and \( V \) are orthogonal matrices, and \( \Sigma \) is a \underline{diagonal matrix containing } \underline{the singular values of \( H \)}. To project \( H \) to a low-rank matrix, we keep only the \( r \) largest singular values and setting the rest to zero. This operation effectively reduces the rank of \( H \) to \( r \). The projected matrix is then given by:
+\[
+H_{\text{proj}} = U \Sigma_{\text{proj}} V^T
+\]
+where \( \Sigma_{\text{proj}} \) is the diagonal matrix with only the \( r \) largest singular values. This projection step ensures that the updated matrix \( H_{k+1} \) remains within the low-rank constraint. \\
+
+
 
 \section{Conclusion}
 
 This paper provides a comprehensive comparison of various machine learning techniques for **THz channel estimation**. By converting the complex-valued channel estimation problem into a real-valued one, the authors are able to leverage powerful machine learning models such as neural networks and log-likelihood minimization techniques to achieve accurate channel estimation. The results indicate that methods like **Projected Gradient Ascent (PGA)** and **Neural Networks (NN)** perform well in challenging SNR conditions, making them suitable candidates for future THz communication systems.
-
+\begin{thebibliography}{9}
+  \bibitem{myers2020}
+  N. J. Myers, K. N. Tran, and R. W. Heath, “Low-rank mmwave mimo channel estimation in one-bit receivers,” in \textit{ICASSP 2020-2020 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)}, IEEE, 2020, pp. 5005–5009.
+  \end{thebibliography}
 \end{document}
