--- a/README
+++ b/README
@@ -1,1 +1,24 @@
-This Repo contains my analysis for different technical papers in the realm of ML, DL, and AI. Always being updated. For more information, please contact me at: mohamad.allakkis@gmail.com
+# Analysis of Machine Learning Papers
+
+This repository is dedicated to the study and analysis of foundational and cutting-edge papers in the field of **Machine Learning (ML)**. It provides a structured approach to understanding the methodologies, contributions, and impact of these works on the ML domain. The repository serves as a resource for researchers, students, and practitioners seeking deeper insights into ML advancements.
+
+## Purpose
+
+The aim of this repository is to:
+- Explore key ideas and methodologies presented in ML research.
+- Analyze and critique the effectiveness and limitations of proposed techniques.
+- Provide a platform for discussing and extending the knowledge derived from these papers.
+
+## Organization
+
+Each paper is contained within its own directory, which includes relevant materials and resources. Some directories may also contain implementations, experiments, or additional analyses related to the paper.
+
+## Contribution
+
+Contributions to this repository are welcome. Whether you're adding new papers, analyses, or insights, your input is valuable in expanding the understanding of machine learning research. Please adhere to consistent formatting and general guidelines when contributing.
+
+## Contact
+
+For any inquiries or suggestions, feel free to reach out to mohamad.allakkis@gmail.com
+
+---
